fix gap in dropdown menu created by changed lineheights in #305 (#316)
Closes #309

--- a/src/components/freestanding/dropdown/dropdown-menu.module.css
+++ b/src/components/freestanding/dropdown/dropdown-menu.module.css
@@ -4,7 +4,7 @@
   display: block;
   position: fixed;
   left: 0;
-  top: 80px;
+  top: 75px;
   z-index: 999;
   width: 100%;
   padding: 24px 0;
